--- a/bibliotecaMusicalPresentacion/src/main/java/Pantallas/FrmUsuarioPerfil.form
+++ b/bibliotecaMusicalPresentacion/src/main/java/Pantallas/FrmUsuarioPerfil.form
@@ -164,6 +164,9 @@
               <Color id="Hand Cursor"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFavoritosActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnRestricciones">
           <Properties>
